[project]
authors = [{name = "Naiara Patiño", email = "naiarapatino@gmail.com"}]
dependencies = []
name = "example"
requires-python = ">= 3.11"
version = "0.1.0"
license = "MIT"
license_files = "LICENSE.txt"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
example = { path = ".", editable = true }

[tool.pixi.tasks]
